fixed links in sidebar

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,10 +18,10 @@
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-        <p class="view"><a href="projects">My works</a></p>
-        <p class="view"><a href="blog">Some developer's blog</a></p>
-        <p class="view"><a href="cv">My CV</a></p>
-        <p class="view"><a href="cv.pdf">My CV (pdf)</a></p>
+        <p class="view"><a href="/projects">My works</a></p>
+        <p class="view"><a href="/blog">Some developer's blog</a></p>
+        <p class="view"><a href="/cv">My CV</a></p>
+        <p class="view"><a href="/cv.pdf">My CV (pdf)</a></p>
         <h3>On the web</h3>
         <p class="view"><a href="http://vk.com/semior001">VK</a></p>
         <p class="view"><a href="http://github.com/semior001">Github</a></p>
